# fleetfix-command-center

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  advisor.py  auth.py  clients.py  config.py  main.py  models.py  policy.py  repository.py  service.py  workflow.py
docs/runbooks/: production-readiness.md
evaluations/: golden_dataset.jsonl
infra/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
static/: app.js  index.html  styles.css
tests/: test_workflow.py
