[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fleetfix-command-center"
version = "1.0.0"
description = "Production-grade LangGraph fleet diagnostics and maintenance orchestration."
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.7,<3.0",
  "boto3>=1.35,<2.0",
  "PyJWT[crypto]>=2.9,<3.0",
  "langgraph>=0.3,<1.0",
  "opentelemetry-api>=1.28,<2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0,<10.0", "httpx>=0.27,<1.0"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
